added title-bar-height variable
For easier management and modification of title bar height

--- a/Fiddle Chat App src files(windows-os)/src/styles/_constantMixins.scss
+++ b/Fiddle Chat App src files(windows-os)/src/styles/_constantMixins.scss
@@ -48,3 +48,4 @@ $border-col: var(--root-border-col);
 $chat-bg-layer: var(--root-chat-bg-layer);
 $emoji-border-col: var(--root-emoji-border-col);
 $dark-selected-col: #8257FE;
+$title-bar-height: 40px;
