--- a/Fiddle Chat App src files(windows-os)/src/styles/Room.scss
+++ b/Fiddle Chat App src files(windows-os)/src/styles/Room.scss
@@ -2,12 +2,12 @@
 
 .Room-section{
     width: calc(100vw - 461px);
-    height: calc(100vh - 40px);
+    height: calc(100vh - $title-bar-height);
     display: flex;
 
     .messages-box{
         width: calc(100vw - 714px);//503
-        height: calc(100vh - 40px);
+        height: calc(100vh - $title-bar-height);
         border-left: 1px solid $border-col;
         border-right: 1px solid $border-col;
 
@@ -59,17 +59,17 @@
 
         .text-messages-box-room{
             width: calc(100vw - 714px);
-            height: calc(100vh - 40px);
+            height: calc(100vh - $title-bar-height);
 
             .text-messages-container-plain-room{
                 width: calc(100vw - 714px);
-                height: calc(100vh - 40px);
+                height: calc(100vh - $title-bar-height);
                 z-index: 500;
                 background: $darker-side-bar-col;
 
                 .background-img-container-room{
                     width: calc(100vw - 714px);
-                    height: calc(100vh - 40px);
+                    height: calc(100vh - $title-bar-height);
                     overflow: hidden;
                     z-index: 100;
         
@@ -84,9 +84,9 @@
 
                 .chat-bg-layer-room{
                     background: $chat-bg-layer; 
-                    margin-top: calc(-100vh + 40px);
+                    margin-top: calc(-100vh + $title-bar-height);
                     width: calc(100vw - 714px);
-                    height: calc(100vh - 40px);
+                    height: calc(100vh - $title-bar-height);
                     overflow-y: scroll;
                     overflow: overlay;
                     position: absolute;
@@ -245,7 +245,7 @@
 
     .details-box{
         width: 251px;
-        height: calc(100vh - 40px);
+        height: calc(100vh - $title-bar-height);
         display: flex;
         flex-direction: column;
         align-items: center;
