fixed auth page loader issue on auth cancel
fixed the issue of loader showing when a user cancels an auth process before completing it

--- a/Fiddle Chat App/src/styles/Login.scss
+++ b/Fiddle Chat App/src/styles/Login.scss
@@ -261,7 +261,13 @@ $login-btn-col-active: #6630fa;
         h1{
             color: $white-text-col;
             font-size: 30px;
-            margin-bottom: 50px;
+            margin-bottom: 10px;
+        }
+
+        p{
+            color: $white-text-col;
+            font-size: 15px;
+            margin-bottom: 30px;
         }
     }
 }
