implemented deep link auth for google sign-in/up

--- a/Fiddle Chat App/src/styles/Login.scss
+++ b/Fiddle Chat App/src/styles/Login.scss
@@ -204,6 +204,10 @@ $login-btn-col-active: #6630fa;
                     .auth-button:active{
                         background: $external-login-btn-col-active;
                     }
+
+                    .hidden-auth-button{
+                        visibility: hidden;
+                    }
                 }
 
                 .email-opened-g, .email-sent-g{
