--- a/Fiddle Chat App/src/styles/App.scss
+++ b/Fiddle Chat App/src/styles/App.scss
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
 
+@import "constantMixins";
+
 ::-webkit-scrollbar {width: 3px;}
 
 /* Track */
@@ -55,6 +57,7 @@
   user-select: none;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   top: 0;
   left: 0;
   right: 0;
@@ -127,8 +130,6 @@ html{
   background: #14161F;
   height: 100vh;
   width: 100vw;
-  min-width: 1024px;
-  min-height: 700px;/*change to 660px when using OS title bar, change to 700px when using custom*/
   overflow-x: hidden;
   overflow: overlay;
 }
@@ -136,8 +137,6 @@ html{
 body {
   height: 100vh;
   width: 100vw;
-  min-width: 1024px;
-  min-height: 700px;/*change to 660px when using OS title bar, change to 700px when using custom*/
   font-family: 'Baloo Bhai 2', cursive;/*, 'Noto Color Emoji'*/
   overflow: hidden;
   margin: 0;
@@ -151,11 +150,20 @@ body {
   user-select: none;          /* Likely future */ 
 }
 
+.container {
+  margin: 0;
+  padding-top: 10vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
 .body-main-content{
   height: 100vh;
   width: 100vw;
   min-width: 1024px;
-  min-height: 700px;/*change to 660px when using OS title bar, change to 700px when using custom*/
+  min-height: calc(660px + var(--title-bar-height));
   position: fixed;
   top: 0;
   z-index: 50;
