--- a/Fiddle Chat App/src/styles/Messages.scss
+++ b/Fiddle Chat App/src/styles/Messages.scss
@@ -2,19 +2,19 @@
 
 .messages-details-box{
     width: calc(100vw - 461px);
-    height: calc(100vh - $title-bar-height);
+    height: calc(100vh - var(--title-bar-height));
     display: flex;
 
     .messages-box{
         width: calc(100vw - 542px);//503
-        height: calc(100vh - $title-bar-height);
+        height: calc(100vh - var(--title-bar-height));
         border-left: 1px solid $border-col;
         border-right: 1px solid $border-col;
 
         .top-bar-blur{
             position: absolute;
             width: calc(100vw - 542px);
-            top: $title-bar-height;
+            top: var(--title-bar-height);
             height: 52px;
             background: $top-layer-blur;
             display: flex;
@@ -59,17 +59,17 @@
 
         .text-messages-box{
             width: calc(100vw - 542px);
-            height: calc(100vh - $title-bar-height);
+            height: calc(100vh - var(--title-bar-height));
             z-index: 500;
 
             .text-messages-container-plain{
                 width: calc(100vw - 542px);
-                height: calc(100vh - $title-bar-height);
+                height: calc(100vh - var(--title-bar-height));
                 background: $darker-side-bar-col;
 
                 .background-img-container{
                     width: calc(100vw - 542px);
-                    height: calc(100vh - $title-bar-height);
+                    height: calc(100vh - var(--title-bar-height));
                     overflow: hidden;
                     z-index: 100;
         
@@ -84,9 +84,9 @@
 
                 .chat-bg-layer{
                     background: $chat-bg-layer; 
-                    margin-top: calc(-100vh + $title-bar-height);
+                    margin-top: calc(-100vh + var(--title-bar-height));
                     width: calc(100vw - 542px);
-                    height: calc(100vh - $title-bar-height);
+                    height: calc(100vh - var(--title-bar-height));
                     overflow-y: auto;
                     position: absolute;
                     z-index: 900;
@@ -243,7 +243,7 @@
 
     .details-box{
         width: 79px;
-        height: calc(100vh - $title-bar-height);
+        height: calc(100vh - var(--title-bar-height));
         display: flex;
         flex-direction: column;
         align-items: center;
