--- a/Fiddle Chat App/src/styles/_constantMixins.scss
+++ b/Fiddle Chat App/src/styles/_constantMixins.scss
@@ -145,7 +145,7 @@ $top-most-app-draggable-sec: var(--root-top-most-app-draggable-sec);
 $lighter-side-bar-col: var(--root-lighter-side-bar-col);
 $bad-change-col: #FD5959;
 $good-change-col: #55D804;
-$light-blue-col: #1ac2c2;
+$light-blue-col: #1ca5a5;
 $text-box-colours: #a9a9a936;
 $silver-ish-gradient: linear-gradient(268.03deg, #8b8b8ba6 -0.17%, #cececea6 99.83%);
 $top-layer-blur: #7C7C8030;
