--- a/Fiddle Chat App/src/styles/Login.scss
+++ b/Fiddle Chat App/src/styles/Login.scss
@@ -94,7 +94,6 @@ $login-btn-col-active: #6630fa;
             .signup-section, .login-section, .reset-pswd-section, .reset-pswd-confirm-section{
                 margin-left: 5vw;
                 width: 395px;
-                height: 601px;
 
                 h1{
                     text-align: center;
@@ -172,17 +171,16 @@ $login-btn-col-active: #6630fa;
                 }
 
                 h5{
-                    margin-top: -7px;
+                    margin-top: -15px;
                     color: $white-text-col;
                     text-align: center;
                     font-size: 20px;
                 }
 
                 .external-auth-buttons{
+                    margin-top: -30px;
                     width: 365px;
                     height: 129px;
-                    display: flex;
-                    flex-wrap: wrap;
                     margin-left: 15px;
 
                     .auth-button{
@@ -194,6 +192,7 @@ $login-btn-col-active: #6630fa;
                         height: 57px;
                         border-radius: 15px;
                         background: $external-login-btn-col;
+                        margin-bottom: 10px;
                         h2{
                             color: $gray-text-col;
                             font-size: 30px;
