Remove backdrop-filter property from CSS styles

--- a/Fiddle Chat App/src/styles/ConstContent.scss
+++ b/Fiddle Chat App/src/styles/ConstContent.scss
@@ -26,8 +26,7 @@
         z-index: 3000;
         width: 100vw;
         height: 100vh;
-        background: rgba(37, 37, 37, 0.05);
-        backdrop-filter: blur(25px);
+        background: linear-gradient(252.46deg, #001D36 0%, #3F1A61 52.08%, #8A7A94 100%);
         position: fixed;
         top: 0;
         left: 0;
