--- a/Fiddle Chat App/src/styles/Login.scss
+++ b/Fiddle Chat App/src/styles/Login.scss
@@ -19,7 +19,7 @@ $login-btn-col-active: #6630fa;
         width: 200px;
         height: 200px;
         position: absolute;
-        backdrop-filter: blur(20px);
+        filter: blur(20px);
         border-radius: 50%;
         z-index: 20;
     }
@@ -53,7 +53,6 @@ $login-btn-col-active: #6630fa;
         width: 100vw;
         height: 100vh;
         background: rgba(37, 37, 37, 0.05);
-        backdrop-filter: blur(35px);
         position: absolute;
         top: 0;
         right: 0;
@@ -257,8 +256,7 @@ $login-btn-col-active: #6630fa;
         height: 100vh;
         top: 0;
         left: 0;
-        background: rgba(37, 37, 37, 0.05);
-        backdrop-filter: blur(35px);
+        background: linear-gradient(252.46deg, #001D36 0%, #3F1A61 52.08%, #8A7A94 100%);
         position: fixed;
         display: flex;
         justify-content: center;
